# ateliergit1

./: main.c
integration/: Makefile.am  Makefile.in
integration/src/: Makefile  Makefile.am  Makefile.in  bloc.txt  callbacks.c  cap.c  capteur.txt  ichrak.c  integration  interface.h.bak  menu.txt  rech2.txt  reclamation.c  reclamation.h  role.txt  tmp77.txt
